--- a/monitor/forms/mainwindow.ui
+++ b/monitor/forms/mainwindow.ui
@@ -45,8 +45,8 @@
    <widget class="QPushButton" name="program0">
     <property name="geometry">
      <rect>
-      <x>970</x>
-      <y>60</y>
+      <x>960</x>
+      <y>40</y>
       <width>21</width>
       <height>21</height>
      </rect>
@@ -58,8 +58,8 @@
    <widget class="QPushButton" name="program1">
     <property name="geometry">
      <rect>
-      <x>970</x>
-      <y>110</y>
+      <x>960</x>
+      <y>90</y>
       <width>21</width>
       <height>21</height>
      </rect>
@@ -97,8 +97,8 @@
    <widget class="QLineEdit" name="program0_filename">
     <property name="geometry">
      <rect>
-      <x>620</x>
-      <y>60</y>
+      <x>610</x>
+      <y>40</y>
       <width>331</width>
       <height>21</height>
      </rect>
@@ -107,8 +107,8 @@
    <widget class="QLineEdit" name="program1_filename">
     <property name="geometry">
      <rect>
-      <x>620</x>
-      <y>110</y>
+      <x>610</x>
+      <y>90</y>
       <width>331</width>
       <height>21</height>
      </rect>
@@ -117,8 +117,8 @@
    <widget class="QPushButton" name="start_button">
     <property name="geometry">
      <rect>
-      <x>620</x>
-      <y>150</y>
+      <x>610</x>
+      <y>130</y>
       <width>80</width>
       <height>21</height>
      </rect>
@@ -130,8 +130,8 @@
    <widget class="QPushButton" name="stop_button">
     <property name="geometry">
      <rect>
-      <x>720</x>
-      <y>150</y>
+      <x>710</x>
+      <y>130</y>
       <width>80</width>
       <height>21</height>
      </rect>
@@ -143,7 +143,7 @@
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>630</x>
+      <x>610</x>
       <y>20</y>
       <width>111</width>
       <height>21</height>
@@ -156,14 +156,39 @@
    <widget class="QLabel" name="label_2">
     <property name="geometry">
      <rect>
-      <x>620</x>
-      <y>90</y>
+      <x>610</x>
+      <y>70</y>
       <width>111</width>
       <height>21</height>
      </rect>
     </property>
     <property name="text">
      <string>Program core 1</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="connect_button">
+    <property name="geometry">
+     <rect>
+      <x>620</x>
+      <y>350</y>
+      <width>89</width>
+      <height>25</height>
+     </rect>
+    </property>
+    <property name="whatsThis">
+     <string/>
+    </property>
+    <property name="text">
+     <string>Connect</string>
+    </property>
+    <property name="checkable">
+     <bool>true</bool>
+    </property>
+    <property name="checked">
+     <bool>false</bool>
+    </property>
+    <property name="flat">
+     <bool>false</bool>
     </property>
    </widget>
   </widget>
@@ -173,7 +198,7 @@
      <x>0</x>
      <y>0</y>
      <width>1023</width>
-     <height>20</height>
+     <height>22</height>
     </rect>
    </property>
   </widget>
