--- a/monitor/forms/mainwindow.ui
+++ b/monitor/forms/mainwindow.ui
@@ -292,6 +292,9 @@
     </widget>
    </widget>
    <widget class="QPushButton" name="resetButton">
+    <property name="enabled">
+     <bool>false</bool>
+    </property>
     <property name="geometry">
      <rect>
       <x>790</x>
