--- a/monitor/forms/mainwindow.ui
+++ b/monitor/forms/mainwindow.ui
@@ -346,7 +346,7 @@
       <rect>
        <x>10</x>
        <y>20</y>
-       <width>84</width>
+       <width>271</width>
        <height>19</height>
       </rect>
      </property>
@@ -362,12 +362,12 @@
       <rect>
        <x>10</x>
        <y>50</y>
-       <width>84</width>
+       <width>271</width>
        <height>19</height>
       </rect>
      </property>
      <property name="text">
-      <string>RadioButton</string>
+      <string>Remote board</string>
      </property>
     </widget>
     <widget class="QLineEdit" name="remoteAddrLine">
@@ -400,7 +400,7 @@
      <x>0</x>
      <y>0</y>
      <width>1023</width>
-     <height>20</height>
+     <height>22</height>
     </rect>
    </property>
   </widget>
